test/classes/initializers/siblingCall/inDefer.good
inDefer.chpl:4: In initializer:
inDefer.chpl:6: error: this.init() not allowed in defer statements
